# alibot

./: .gitignore  aliexpress_app.py  bot_app.py  logger_.py  pyproject.toml  search_goods_by_photo.py  utils.py  Технічне завдання.txt
